--- a/static/campout.html
+++ b/static/campout.html
@@ -97,7 +97,7 @@
 	<!-- https://developer.paypal.com/docs/paypal-payments-standard/integration-guide/formbasics/ -->
 
 	<script type="text/plain" id="paymentFormTemplate">
-		<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+		<form action="{{submissionUrl}}">
 			<input type="hidden" name="cmd" value="_cart">
 			<input type="hidden" name="charset" value="utf-8">
 			<input type="hidden" name="currency_code" value="USD">
@@ -105,7 +105,7 @@
 			<input type="hidden" name="notify_url" value="{{notifyUrl}}">
 			<input type="hidden" name="upload" value="1">
 			<!-- 150 x 150 logo -->
-			<input type="hidden" name="image_url" value="{{iconUrl}}">
+			<!--<input type="hidden" name="image_url" value="{{iconUrl}}">-->
 			<input type="hidden" name="no_shipping" value="1">
 			<input type="hidden" name="return" value="{{returnUrl}}"
 			{{#items}}
@@ -114,5 +114,10 @@
 				<input type="hidden" name="quantity_{{itemNumber}}" value="{{quantity}}">
 			{{/items}}
 			<input type="hidden" name="custom" value="{{custom}}">
+			<input type="image" name="submit"
+        		src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif"
+        		alt="Add to Cart">
+    		<img alt="" width="1" height="1"
+        		src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" >
 		</form>
 	</script>
