--- a/static/campout.html
+++ b/static/campout.html
@@ -121,7 +121,7 @@
 			<input type="hidden" name="cmd" value="_cart">
 			<input type="hidden" name="charset" value="utf-8">
 			<input type="hidden" name="currency_code" value="USD">
-			<input type="hidden" name="business" value="{{businessId}}"
+			<input type="hidden" name="business" value="{{businessId}}">
 			<input type="hidden" name="notify_url" value="{{notifyUrl}}">
 			<input type="hidden" name="upload" value="1">
 			<!-- 150 x 150 logo -->
