Put summary and checkout in last item of carousel.

--- a/static/campout.html
+++ b/static/campout.html
@@ -22,12 +22,18 @@
 	    	</div>
 	    	
 	    	<div class="carousel-item">
-	      			<div id="adults"></div>
+	      		<div id="adults"></div>
 
-					<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addParticipant" data-which="adult">
+				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addParticipant" data-which="adult">
 						Add Adult
-					</button>
-					<button type="button" class="btn btn-secondary next-button">Next</button>
+				</button>
+				<button type="button" class="btn btn-secondary next-button">Next</button>
+	    	</div>
+
+	    	<div class="carousel-item">
+    			<div id="summary"></div>
+
+				<div id="checkout"></div>
 	    	</div>
 
 		</div>
@@ -72,10 +78,6 @@
 			</div>
 		</div>
 	</div>
-
-	<div id="summary"></div>
-
-	<div id="checkout"></div>
 
 	<script type="text/plain" id="eventTemplate">
 		<h2>{{name}}</h2>
