Disable auto advance

--- a/static/campout.html
+++ b/static/campout.html
@@ -1,6 +1,6 @@
 	<div id="event"></div>
 
-	<div id="participantTypeCarousel" class="carousel slide" data-ride="false">
+	<div id="participantTypeCarousel" class="carousel slide" data-ride="false" data-interval="false">
 	  	<div class="carousel-inner">
 	    	
 	    	<div class="carousel-item active">
