Add CSS class to list

--- a/static/campout.html
+++ b/static/campout.html
@@ -89,7 +89,7 @@
 
 	<script type="text/plain" id="participantTemplate">
 			<h3>{{participantType}}</h3>
-			<div>
+			<div class="participant-list">
 			{{#participants}}
 				<dl>
 					<dt>First Name</dt>
