Passing id to view.

--- a/static/campout.html
+++ b/static/campout.html
@@ -91,7 +91,7 @@
 			<h3>{{participantType}}</h3>
 			<div class="participant-list">
 			{{#participants}}
-				<dl>
+				<dl data-id="{{id}}">
 					<dt>First Name</dt>
 					<dd>{{firstName}}</dd>
 					<dt>Last Name</dt>
