--- a/static/campout.html
+++ b/static/campout.html
@@ -143,19 +143,19 @@
 			<input type="hidden" name="cmd" value="_cart">
 			<input type="hidden" name="charset" value="utf-8">
 			<input type="hidden" name="currency_code" value="USD">
-			<input type="hidden" name="business" value="{{businessId}}">
-			<input type="hidden" name="notify_url" value="{{notifyUrl}}">
+			<input type="hidden" name="business" value="{{{businessId}}}">
+			<input type="hidden" name="notify_url" value="{{{notifyUrl}}}">
 			<input type="hidden" name="upload" value="1">
 			<!-- 150 x 150 logo -->
-			<!--<input type="hidden" name="image_url" value="{{iconUrl}}">-->
+			<!--<input type="hidden" name="image_url" value="{{{iconUrl}}}">-->
 			<input type="hidden" name="no_shipping" value="1">
-			<input type="hidden" name="return" value="{{returnUrl}}"
+			<input type="hidden" name="return" value="{{{returnUrl}}}"
 			{{#items}}
-				<input type="hidden" name="item_name_{{itemNumber}}" value="{{name}}">
-				<input type="hidden" name="amount_{{itemNumber}}" value="{{amount}}">
-				<input type="hidden" name="quantity_{{itemNumber}}" value="{{quantity}}">
+				<input type="hidden" name="item_name_{{itemNumber}}" value="{{{name}}}">
+				<input type="hidden" name="amount_{{itemNumber}}" value="{{{amount}}}">
+				<input type="hidden" name="quantity_{{itemNumber}}" value="{{{quantity}}}">
 			{{/items}}
-			<input type="hidden" name="custom" value="{{custom}}">
+			<input type="hidden" name="custom" value="{{{custom}}}">
 			<input type="image" name="submit"
         		src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif"
         		alt="Add to Cart">
