Fixing checkout form

--- a/static/campout.html
+++ b/static/campout.html
@@ -149,7 +149,7 @@
 			<!-- 150 x 150 logo -->
 			<!--<input type="hidden" name="image_url" value="{{{iconUrl}}}">-->
 			<input type="hidden" name="no_shipping" value="1">
-			<input type="hidden" name="return" value="{{{returnUrl}}}"
+			<input type="hidden" name="return" value="{{{returnUrl}}}">
 			{{#items}}
 				<input type="hidden" name="item_name_{{itemNumber}}" value="{{{name}}}">
 				<input type="hidden" name="amount_{{itemNumber}}" value="{{{amount}}}">
