--- a/static/campout.html
+++ b/static/campout.html
@@ -92,6 +92,7 @@
 			<div class="participant-list">
 			{{#participants}}
 				<div class="participant">
+					<button type="button" class="edit-participant" data-id="{{id}}"><i class="fas fa-edit"></i></button>
 					<button type="button" class="delete-participant" data-id="{{id}}">x</button>
 					<dl>
 						<dt>First Name</dt>
