Fixing edit button.

--- a/static/campout.html
+++ b/static/campout.html
@@ -92,7 +92,19 @@
 			<div class="participant-list">
 			{{#participants}}
 				<div class="participant">
-					<button type="button" class="edit-participant" data-id="{{id}}"><i class="fas fa-edit fa-xs"></i></button>
+					<button type="button" class="edit-participant" data-id="{{id}}" 
+					{{#isAdult}}
+						data-which="adult"
+					{{/isAdult}}
+					{{^isAdult}}
+						{{#isScout}}
+							data-which="scout"
+						{{/isScout}}
+						{{^isScout}}
+							data-which="sibling"
+						{{/isScout}}
+					{{/isAdult}}
+					><i class="fas fa-edit fa-xs"></i></button>
 					<button type="button" class="delete-participant" data-id="{{id}}">x</button>
 					<dl>
 						<dt>First Name</dt>
