--- a/static/campout.html
+++ b/static/campout.html
@@ -152,7 +152,7 @@
 	<!-- https://developer.paypal.com/docs/paypal-payments-standard/integration-guide/formbasics/ -->
 
 	<script type="text/plain" id="paymentFormTemplate">
-		<form action="{{submissionUrl}}" method="post">
+		<form action="{{submissionUrl}}" method="post" accept-charset="UTF-8">
 			<input type="hidden" name="cmd" value="_cart">
 			<input type="hidden" name="charset" value="utf-8">
 			<input type="hidden" name="currency_code" value="USD">
