--- a/static/campout.html
+++ b/static/campout.html
@@ -61,6 +61,8 @@
 								<input type="text" class="form-control" id="lastName">
 								<label for="email">Email</label>
 								<input type="email" class="form-control" id="email">
+								<label for="phone">Phone</label>
+								<input type="phone" class="form-control" id="phone">
 								<label for="age">Age</label>
 								<input type="number" class="form-control" id="age">
 								<label for="den">Den</label>
@@ -114,6 +116,8 @@
 						{{#isAdult}}
 							<dt>Email</dt>
 							<dd>{{email}}</dd>
+							<dt>Phone</dt>
+							<dd>{{phone}}</dd>
 						{{/isAdult}}
 						{{^isAdult}}
 							<dt>Age</dt>
