Adding view for redirect after checkout.

--- a/static/campout.html
+++ b/static/campout.html
@@ -1,8 +1,10 @@
-	<div id="event"></div>
-
-	<div id="participantTypeCarousel" class="carousel slide" data-ride="false" data-interval="false">
+	<div id="registrationCarousel" class="carousel slide" data-ride="false" data-interval="false">
 	  	<div class="carousel-inner">
 	    	
+	  		<div class="carousel-item">
+	  			<div id="event"></div>
+	  		</div>
+
 	    	<div class="carousel-item active">
 				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addParticipant" data-which="scout">
 					Add Scout
@@ -41,6 +43,11 @@
 
 		</div>
 	</div>
+
+	<div id="finalScouts"></div>
+	<div id="finalSiblings"></div>
+	<div id="finalAdults"></div>
+	<div id="finalSummary"></div>
 
 	<div class="modal fade" id="addParticipant" tabindex="-1" role="dialog" aria-labelledby="participantModalLabel" aria-hidden="true">
 		<div class="modal-dialog" role="document">
