Fixing view rendering.

--- a/static/campout.html
+++ b/static/campout.html
@@ -44,10 +44,12 @@
 		</div>
 	</div>
 
-	<div id="finalScouts"></div>
-	<div id="finalSiblings"></div>
-	<div id="finalAdults"></div>
-	<div id="finalSummary"></div>
+	<div id="final">
+		<div id="finalScouts"></div>
+		<div id="finalSiblings"></div>
+		<div id="finalAdults"></div>
+		<div id="finalSummary"></div>
+	</div>
 
 	<div class="modal fade" id="addParticipant" tabindex="-1" role="dialog" aria-labelledby="participantModalLabel" aria-hidden="true">
 		<div class="modal-dialog" role="document">
