Fix email template.

--- a/static/campout.html
+++ b/static/campout.html
@@ -45,6 +45,7 @@
 	</div>
 
 	<div id="final">
+		<h2 id="thanks"></h2>
 		<div id="finalScouts"></div>
 		<div id="finalSiblings"></div>
 		<div id="finalAdults"></div>
