--- a/static/campout.html
+++ b/static/campout.html
@@ -1,11 +1,12 @@
 	<div id="registrationCarousel" class="carousel slide" data-ride="false" data-interval="false">
 	  	<div class="carousel-inner">
 	    	
-	  		<div class="carousel-item">
+	  		<div class="carousel-item active">
 	  			<div id="event"></div>
+	  			<button type="button" class="btn btn-secondary next-button">Register</button>  
 	  		</div>
 
-	    	<div class="carousel-item active">
+	    	<div class="carousel-item">
 				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addParticipant" data-which="scout">
 					Add Scout
 				</button>
