--- a/static/campout.html
+++ b/static/campout.html
@@ -3,7 +3,7 @@
 	    	
 	  		<div class="carousel-item active">
 	  			<div id="event"></div>
-	  			<button type="button" class="btn btn-secondary next-button">Register</button>  
+	  			<button type="button" class="btn btn-secondary next-button btn-block btn-lg">Register</button> 
 	  		</div>
 
 	    	<div class="carousel-item">
