--- a/static/campout.html
+++ b/static/campout.html
@@ -188,6 +188,6 @@
         		src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif"
         		alt="Add to Cart">
     		<img alt="" width="1" height="1"
-        		src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" >
+        		src="https://www.paypalobjects.com/digitalassets/c/website/marketing/apac/C2/logos-buttons/44_Grey_CheckOut_Pill_Button.png" >
 		</form>
 	</script>
