--- a/static/campout.html
+++ b/static/campout.html
@@ -185,9 +185,9 @@
 			{{/items}}
 			<input type="hidden" name="custom" value="{{{custom}}}">
 			<input type="image" name="submit"
-        		src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif"
+        		src="https://www.paypalobjects.com/digitalassets/c/website/marketing/apac/C2/logos-buttons/44_Grey_CheckOut_Pill_Button.png"
         		alt="Add to Cart">
     		<img alt="" width="1" height="1"
-        		src="https://www.paypalobjects.com/digitalassets/c/website/marketing/apac/C2/logos-buttons/44_Grey_CheckOut_Pill_Button.png" >
+        		src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" >
 		</form>
 	</script>
