Fixing event template.

--- a/static/campout.html
+++ b/static/campout.html
@@ -97,7 +97,7 @@
 
 	<script type="text/plain" id="eventTemplate">
 		<h2>{{name}}</h2>
-		{{description}}
+		{{{description}}}
 	</script>
 
 	<script type="text/plain" id="participantTemplate">
