Fixing spacing issue.

--- a/static/campout.html
+++ b/static/campout.html
@@ -155,7 +155,7 @@
 				{{#items}}
 					<tr>
 						<td>{{name}}</td>
-						<td>{{quantity}}</td>
+						<td class="quantity">{{quantity}}</td>
 						<td>{{amount}}</td>
 					</tr>
 				{{/items}}
