Trying to fix formatting issue.

--- a/static/campout.html
+++ b/static/campout.html
@@ -154,9 +154,9 @@
 				<tbody>
 				{{#items}}
 					<tr>
-						<td>{{name}}</td>
 						<td class="quantity">{{quantity}}</td>
-						<td>{{amount}}</td>
+						<td>{{name}}</td>
+						<td>${{amount}}</td>
 					</tr>
 				{{/items}}
 				</tbody>
