--- a/static/campout.html
+++ b/static/campout.html
@@ -1,4 +1,6 @@
-	<div id="registrationCarousel" class="carousel slide" data-ride="false" data-interval="false">
+	<h2 id="loading">Loading &hellip;</h2>
+
+	<div id="registrationCarousel" class="carousel slide" data-ride="false" data-interval="false" style="display: none;">
 	  	<div class="carousel-inner">
 	    	
 	  		<div class="carousel-item active">
